Bug #15215 mysqld fails at start-up because of illegal reply from mgmd
Submitted: 24 Nov 2005 7:16 Modified: 1 Feb 2006 4:26
Reporter: Stewart Smith
Status: Closed
Category:Server: Cluster Severity:S3 (Non-critical)
Version:5.0.15, 5.1 OS:
Assigned to: Bugs System Target Version:

[24 Nov 2005 7:16] Stewart Smith
Description:
mysqld connects to a mgm server, then the mgm server goes away before a node id can be
allocated.

mysqld-err.trace:

Error in mgm protocol parser. cmd: >get nodeid< status: 2 curr: -1073748832
Error in mgm protocol parser. cmd: >get nodeid< status: 2 curr: -1073748832
Error in mgm protocol parser. cmd: >get nodeid< status: 2 curr: -1073748832
Error in mgm protocol parser. cmd: >get nodeid< status: 2 curr: -1073748832
Configuration error: Illegal reply from server :
051112 15:04:08 [ERROR] Can't init databases
051112 15:04:08 [ERROR] Aborting

How to repeat:
in ndb_mgm_alloc_nodeid, before mgm_call, add a printout and a sleep. When running mysqld,
unplug the node from the network when this printout is reached.

This is very hard to hit intentionally without modifying the source.

Suggested fix:
display a better error message and/or retry the mgm server connection.
[24 Nov 2005 7:30] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/32640
[24 Nov 2005 14:58] Stewart Smith
pushed to 5.0.17
[14 Dec 2005 17:42] Jon Stephens
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.

If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information 
about accessing the source trees is available at
    http://www.mysql.com/doc/en/Installing_source_tree.html

Additional info:

Documented fix in 5.0.17 changelog.
[18 Jan 2006 10:42] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/internals/33359