BUG#15215 mysqld fails at start-up because of illegal reply from mgmd

In the rare circumstance where a mysqld connects to a mgm server, then the
mgm server goes away before a node id can be allocated, it was possible to get
an Error in mgm protocol parser error message.


ndb/src/common/mgmcommon/ConfigRetriever.cpp:
  When allocating node id, retry connecting to a management server if it goes away.
ndb/src/mgmapi/mgmapi.cpp:
  Treat Eof and NoLine results from the parser as a sign that we should disconnect
  from this management server. It's up to the caller to work out if they want
  to try again.